@@ -35,7 +35,7 @@ if ( ! defined( 'Validator_VERSION' ) ) {
 	die( '<b>Error:</b> You need to have <a href="http://www.mediawiki.org/wiki/Extension:Validator">Validator</a> installed in order to use <a href="http://www.mediawiki.org/wiki/Extension:SubPageList">SubPageList</a>.<br />' );
 }
 
-define( 'SPL_VERSION', '0.2 alpha' );
+define( 'SPL_VERSION', '0.2' );
 
 $wgExtensionCredits['parserhook'][] = array(
 	'path' => __FILE__,
